<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".User_Pedido_Confirmado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nameAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/pedidoRegistradoTitulo"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/pedidoRegistradoMensaje"
                android:textColor="@color/red"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNuevoPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btnFinalizar"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>