<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AdminInfoPedido">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Informacion de Pedido"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCallPedido"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:background="@drawable/bg_circle"
        android:gravity="center">

        <ImageButton
            android:id="@+id/callPedido"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_call_24"
            android:tint="@color/red" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNombreUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreUser"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDireccionUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccionUser"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNumeroUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroUser"
            android:textSize="18dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvCarrito"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total a pagar: S/"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvPrecioTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00.00"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinalizarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pedidoRealizado"
        android:textColor="@color/white" />

</LinearLayout>